--- a/property-rental-main-app/src/app/components/login/login.component.html
+++ b/property-rental-main-app/src/app/components/login/login.component.html
@@ -1,33 +1,37 @@
 <!-- Section: Design Block -->
-<section class="">
+<section class="h-screen w-full flex justify-center items-center bg-gray-100">
   <!-- Jumbotron -->
-  <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+  <div class="px-4 py-5 text-center text-lg-start">
     <div class="container">
-      <div class="row gx-lg-5 align-items-center">
-        <div class="col-lg-6 mb-5 mb-lg-0">
-          <h1 class="my-5 display-3 fw-bold ls-tight">
-            "Easy rentals, <br />
-            <span class="text-primary"> trusted connections."</span>
+      <div class="row flex flex-col lg:flex-row items-center justify-center lg:justify-between">
+        <div class="col-lg-6 mb-5 lg:mb-0">
+          <h1 class="my-5 text-4xl font-bold leading-tight">
+            Easy rentals, <br />
+            <span class="text-orange-500">trusted connections.</span>
           </h1>
-          <p style="color: hsl(217, 10%, 50.8%)">
+          <p class="text-gray-600 leading-relaxed">
             Our property rental system makes renting simple and hassle-free.
-             Whether you're a property owner looking to list your rental or a
-              tenant searching for the perfect home, our platform ensures a smooth
-               and secure experience. With user-friendly features and a reliable process,
-                we connect landlords and tenants effortlessly, making property management easier than ever.
+            Whether you're a property owner looking to list your rental or a
+            tenant searching for the perfect home, our platform ensures a smooth
+            and secure experience. With user-friendly features and a reliable process,
+            we connect landlords and tenants effortlessly, making property management easier than ever.
           </p>
         </div>
 
-        <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="col-lg-6">
           <div class="card">
-            <div class="card-body py-5 px-md-5">
-              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <!-- 2 column grid layout with text inputs for the first and last names -->
-          
-                <!-- Email input -->
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="email" id="form3Example3" formControlName="email" class="form-control" />
-                  <label class="form-label"  for="email">Email address</label>
+            <div class="d-logo flex justify-center items-center">
+              <img class="logo" src="assets/images/favicon.png" alt="logo">
+            </div>
+            <div class="title">
+              <h2>One account</h2>
+              <h2>Many possibilities</h2>
+            </div>
+            <form  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <section class="form">
+                <div class="form-group">
+                  <label for="email">Email address</label>
+                  <input type="email" id="email" class="form-control" formControlName="email" placeholder="Enter your email" />
                   <small class="text-danger" *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].hasError('required')">
                     Email is required
                   </small>
@@ -35,31 +39,31 @@
                     Please enter a valid email address
                   </small>
                 </div>
-              
 
-                <!-- Password input -->
-                <div data-mdb-input-init class="form-outline mb-4">
-                  <input type="password" id="form3Example4"  formControlName="password" class="form-control" />
-                  <label class="form-label" for="password">Password</label>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" id="password" class="form-control" formControlName="password" placeholder="Enter your password" />
                   <small class="text-danger" *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].hasError('required')">
                     Password is required
                   </small>
                 </div>
 
-     
+                <div class="space-between">
+                  <a  class="link">Forgot password?</a>
+                </div>
+              </section>
 
-                <!-- Submit button -->
-                <button [disabled]="loginForm.invalid" type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
-                  Log in
-                </button>
+              <section class="buttons">
+                <button type="submit" [disabled]="loginForm.invalid" class="button button-primary">Sign in</button>
+              </section>
 
-              </form>
-            </div>
+              <section class="not-member">
+                <span>Not a member yet? <a class="link"routerLink="/signup" >Sign up</a></span>
+              </section>
+            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Jumbotron -->
 </section>
-<!-- Section: Design Block -->
