--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -5,6 +5,6 @@
   <div class="card-body p-3">
     <h4 class="card-title h5 fw-bold mb-2 text-primary">{{product.propertyDetails.name}}</h4>
     <p class="card-text text-center text-muted">{{product.propertyDetails.address.address1 + ', ' + product.propertyDetails.address.city}}</p>
-    <p class="text-center pt-2 small text-dark fw-bold">{{product.propertyDetails.size}} Area</p>
+    <p class="text-center pt-2 small text-dark fw-bold">{{product.propertyDetails.size}}</p>
   </div>
 </div>
