--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -32,7 +32,7 @@
 
         <!-- Area -->
         <p class="property-area text-sm text-gray-700 mt-1">
-          <span class="font-medium">Area:</span> {{ propertyCard.propertyDetails.area || "Not Available" }}
+          <span class="font-medium">Area:</span> {{ propertyCard.propertyDetails.area +" " +"sq Ft"|| "Not Available" }}
         </p>
 
         <!-- Amenities -->
