--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -52,6 +52,10 @@
                   <label for="email">Email</label>
                   <input type="email" id="email" class="form-control" formControlName="email"
                     placeholder="Enter your Email" />
+                    <small class="text-danger"
+                    *ngIf="signupForm.controls['email'].touched && signupForm.controls['email'].hasError('required')">
+                    Email is required
+                  </small>
                   <small class="text-danger"
                     *ngIf="signupForm.controls['email'].touched && signupForm.controls['email'].hasError('email')">
                     Please enter a valid email address
@@ -74,18 +78,19 @@
                   <label for="password">Password</label>
                   <input type="password" id="password" class="form-control" formControlName="password"
                     placeholder="Enter your password" />
-                  <small class="text-danger"
-                    *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].hasError('pattern')">
-                    Password should contain at least 8 characters
+                    <small class="text-danger"
+                    *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].hasError('required')">
+                    Password is required
                   </small>
+                  <small class="text-danger"
+                  *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].hasError('pattern')">
+                  Password must be at least 8 characters long
+                </small>
                 </div>
-
               </section>
-
               <section class="buttons">
                 <button type="submit" [disabled]="signupForm.invalid" class="button button-primary">Sign Up</button>
               </section>
-
               <section class="not-member">
                 <span>Already member? <a class="link" routerLink="/login">Login</a></span>
               </section>
