--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -3,7 +3,7 @@
     <img [src]="product.propertyDetails.thumbnail" class="w-100 h-100 object-fit-cover" alt="">
   </div>
   <div class="card-body p-3">
-    <h4 class="card-title h5 fw-bold mb-2 text-primary">{{product.propertyDetails.name}}</h4>
+    <h4 class="card-title h5 fw-bold mb-2 ">{{product.propertyDetails.name}}</h4>
     <p class="card-text text-center text-muted">{{product.propertyDetails.address.address1 + ', ' + product.propertyDetails.address.city}}</p>
     <p class="text-center pt-2 small text-dark fw-bold">{{product.propertyDetails.size}}</p>
   </div>
