--- a/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
+++ b/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
@@ -9,12 +9,13 @@
 
       <!-- Buttons -->
       <div class="d-grid gap-3">
-        <button class="btn btn-primary btn-lg shadow-sm" data-bs-toggle="modal" data-bs-target="#requestTour">
-          <i class="fas fa-envelope me-2"></i>Send Message
-        </button>
-        <button class="btn btn-success btn-lg shadow-sm" data-bs-toggle="modal" data-bs-target="#sendMessage">
-          <i class="fas fa-calendar-alt me-2"></i>Request Tour
-        </button>
+        <section class="buttons">
+          <button   class="button button-primary"  data-bs-toggle="modal" data-bs-target="#sendMessage">Send Message</button>
+        </section>
+
+        <section class="buttons" >
+          <button  class="button button-primary" data-bs-toggle="modal" data-bs-target="#requestTour">Request Tour</button>
+        </section>
       </div>
       <hr>
       <!-- Contact Information -->
