--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -45,9 +45,9 @@
           <span class="font-medium">Contact:</span> {{ propertyCard.propertyDetails.contactUs.phone || "Not Available"
           }}
         </p>
-        <button class="btn btn-primary request-tour-btn" data-bs-toggle="modal" data-bs-target="#requestTour">
-          Contact This Property
-        </button>
+        <section class="buttons">
+          <button type="submit"  class="button button-primary"  data-bs-toggle="modal" data-bs-target="#requestTour"> Contact This Property</button>
+        </section>
       </div>
     </div>
   </div>
