--- a/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
+++ b/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="bg-light d-flex align-items-center justify-content-center p-3" style="width: 33%;">
                     <div class="text-center">
-                        <h1 class="display-4 fw-bold text-success">{{ data.rating || "Not Available"}}</h1>
+                        <h1 class="display-4 fw-bold" style="color: #FFA41B;">{{ data.rating || "Not Available"}}</h1>
                         <span class="text-muted small">Out of 10</span>
                     </div>
                 </div>
