--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.css
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.css
@@ -83,19 +83,26 @@
     
   }
   
-  /* Button */
-  .request-tour-btn {
-    background-color: #28a745;
-    border: none;
-    color: #ffffff;
-    font-weight: bold;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+  .buttons {
+    margin-top: 10px;
+}
+
+.button {
     width: 100%;
-  }
-  
-  .request-tour-btn:hover {
-    background-color: #218838;
-  }
-  
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+.button-primary {
+    background-color: #2a2c30;
+    color: #fff;
+    transition: background-color 0.3s ease;
+}
+
+.button-primary:hover {
+    background-color: #f86d34;
+}
