--- a/property-rental-main-app/src/app/components/search/search.component.css
+++ b/property-rental-main-app/src/app/components/search/search.component.css
@@ -39,7 +39,7 @@
     padding: 12.5px 30px;
     border: 0;
     border-radius: 100px;
-    background-color: #433895;
+    background-color: #2a2c30;
     color: #ffffff;
     font-weight: Bold;
     transition: all 0.5s;
@@ -47,13 +47,12 @@
   }
   
   button:hover {
-    background-color: #3e58cd;
-    box-shadow: 0 0 20px #454fda50;
-    transform: scale(1.1);
+    background-color: #f86d34;
+    transform: scale(1.05);
   }
   
   button:active {
-    background-color: #3055b9;
+    background-color: #FFA41B;
     transition: all 0.25s;
     -webkit-transition: all 0.25s;
     box-shadow: none;
