--- a/property-rental-main-app/src/app/components/add-property/add-property.component.css
+++ b/property-rental-main-app/src/app/components/add-property/add-property.component.css
@@ -1,10 +1,35 @@
 button {
   padding: 10px 15px;
   border: none;
-  background: #007bff;
+  background: #A6B5AC;
   color: white;
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
   margin-top: 10px;
+}
+
+body{
+  background-color: white;
+}
+.container{
+  background:#F4F5F5;
+}
+input{
+  background:white;
+  
+  border: 2px ;
+  outline-color: #A6B5AC;
+}
+textarea{
+  background-color: white;
+  
+  border:2px;
+  outline-color: #A6B5AC;
+}
+select{
+  background-color: white;
+  
+  border: 2px;
+  outline-color: #A6B5AC;
 }
