--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -8,7 +8,7 @@
   <div class="col-8">
     <div class="property-data w-[75vw] p-6 rounded-lg">
 
-      <app-appartment-data [data]="product" [floorplandetails]="product" [unitsData]="product"></app-appartment-data>
+      <app-appartment-data [apartmentData]="product" [floorplandetails]="product" [unitsData]="product"></app-appartment-data>
 
       <!--  about property -->
       <div class="about-property container pt-5">
