--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -1,16 +1,15 @@
-
 <div class="mt-4 border bg-white border-secondary p-4 rounded">
   <div class="d-flex justify-content-between">
     <div>
       <div class="property-location small mb-2 text-muted">
-        <!-- {{ apartmentData.propertyDetails.breadCrumbs || "Not Available" }} -->
-          {{apartmentData.propertyDetails.name + " / " + apartmentData.propertyDetails.address.city + " / " + apartmentData.propertyDetails.address.state + " / " + apartmentData.propertyDetails.address.country || "Not Available"}}
-    
+        {{ apartmentData?.propertyDetails?.name + " / " + apartmentData.propertyDetails.address.city + " / " +
+        apartmentData.propertyDetails.address.state + " / " + apartmentData.propertyDetails.address.country || "Not Available"}}
       </div>
-      <h1 class="h1 fw-bold">{{ apartmentData.propertyDetails.name || "Not Available" }}</h1>
-      <p class="mt-1 h6">  {{ apartmentData.propertyDetails.address.address1 + "," + apartmentData.propertyDetails.address.city || "Not Available" }}</p>
+      <h1 class="h1 fw-bold">{{ apartmentData?.propertyDetails?.name || "Not Available" }}</h1>
+      <p class="mt-1 h6"> {{ apartmentData.propertyDetails.address.address1 + "," +
+        apartmentData.propertyDetails.address.city || "Not Available" }}</p>
       <div class="mt-2 h5 fw-bold text-secondary">
-        {{ apartmentData.propertyDetails.type || "Not Available"  }}
+        {{ apartmentData.propertyDetails.type || "Not Available" }}
       </div>
       <div class="d-flex gap-3 mt-4">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" [routerLink]="['PropertyMediaView']">
@@ -18,9 +17,7 @@
         </button>
       </div>
     </div>
-
   </div>
-
   <div class="mt-4 group">
     <button type="button" class="flex items-center text-blue-600">
       <span class="hover:underline">Show floor plan details</span>
@@ -35,7 +32,7 @@
       <p class="text-sm font-bold text-gray-900">Highlights</p>
       <div class="d-flex gap-4 mt-4 text-secondary">
         <ul class="list-unstyled ps-3 mb-0">
-          <li>{{ floorDetails.highlights.features  || "Not Available"}}</li>
+          <li>{{ floorDetails.highlights.features || "Not Available"}}</li>
         </ul>
       </div>
     </div>
@@ -52,7 +49,7 @@
         </span>
       </summary>
     </details>
-    
+
     <div class="mt-4">
       <!-- Unit Rows -->
       <details class="border rounded p-3 mb-3" *ngFor="let item of unitData.availableUnits.rows">
@@ -79,9 +76,8 @@
           </ul>
           <p class="mt-3 fw-bold">furnishing:</p>
           <ul class="row list-unstyled g-2">
-            <li class="col-6" *ngFor="let data of item.furnishing">
-            <span class="font-semibold">  {{ data.type +":"|| "Not Available" }}</span><br>
-              {{ data.highlights || "Not Available" }}
+            <li class="col-6">
+              <span class="font-semibold"> {{ item.furnishing || "Not Available" }}</span><br>
             </li>
           </ul>
         </div>
