--- a/property-rental-main-app/src/app/components/featurette/featurette.component.html
+++ b/property-rental-main-app/src/app/components/featurette/featurette.component.html
@@ -15,7 +15,7 @@
         <!-- Image -->
         <div class="lg:w-1/2 flex justify-center order-1 lg:order-2 px-4">
           <img class="rounded-lg shadow-lg transition-transform transform hover:scale-105 duration-300" 
-          [src]="featurette.image" alt="Featurette" [ngStyle]="featurette.imgstyle" />
+          [src]="featurette.image" alt="Featurette"  />
         </div>
       </div>
     </div>
